[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/common/spinbox/value_box.gd" id="1"]

[node name="EditValueBox" type="HBoxContainer"]
script = ExtResource( "1" )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DecreaseButton" type="Button" parent="."]
offset_right = 17.0
offset_bottom = 29.0
focus_mode = 0
text = "-"
script = null

[node name="PanelContainer" type="Panel" parent="."]
offset_left = 21.0
offset_right = 21.0
offset_bottom = 29.0
mouse_default_cursor_shape = 15
size_flags_horizontal = 3
script = null

[node name="Label" type="Label" parent="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "0.1"
align = 1
structured_text_bidi_override_options = []
script = null
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IncreaseButton" type="Button" parent="."]
offset_left = 25.0
offset_right = 46.0
offset_bottom = 29.0
focus_mode = 0
text = "+"
script = null

[connection signal="pressed" from="DecreaseButton" to="." method="_on_decrease_button_pressed"]
[connection signal="gui_input" from="PanelContainer" to="." method="_on_gui_input"]
[connection signal="pressed" from="IncreaseButton" to="." method="_on_increase_button_pressed"]
